# mkdocs-obsidian-links

./: CHANGELOG.md  Pipfile  README.md  Taskfile.yml  pyproject.toml  semantic_release.toml  setup.cfg  setup.py  watch.py  watch_install.py
mkdocs_ezlinks_plugin/: replacer.py
mkdocs_obsidian_links/: file_mapper.py  plugin.py  replacer.py  types.py
test/: mkdocs.yml
test/docs/: index.md
test/docs/my-project/: index.md
test/docs/static/: broken_link.css
