[project]
name = "mkdocs-obsidian-links"
version = "1.0.2"
description = "A Mkdocs plugin that makes linking to other documents easy."
authors = [
    { name = "Mara-Li", email = "mara-li@outlook.fr" }]
license = "MIT"
readme = "README.md"
dependencies = [
    "mkdocs>=1.4",
    "pygtrie>=2.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "watchdog>=2.1.6",
    "python-semantic-release>=9.15.2",
    "build>=0.6.0",
    "rich>=13.9.4",
]

[tool.ruff.lint]
select = ["PTH", "ANN", "N", "Q", "PL", "E", "F", "I"]
ignore = ["E501"]
exclude = ["tests", "docs", "build", "dist", "venv", "venv3", "venv3.6", "venv3.7", "venv3.8", "venv3.9", "venv3.10", "__pycache__"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test.*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["mkdocs_obsidian_links"]